add subdomain name in star
